<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Money2</string>
    <string name="balance_title">Текущий баланс</string>
    <string name="default_balance">0 ₽</string>
    <string name="transactions_title">Последние операции</string>
    <string name="income_button">Доход</string>
    <string name="expense_button">Расход</string>
    <string name="profile_title">Профиль</string>
    <string name="stats_title">Статистика</string>
    <string name="currency_title">Конвертер валют</string>
    <string name="actions_title">Действия</string>
    <string name="logout_title">Выйти</string>
    <string name="save_button">Сохранить</string>
    <string name="back_button">Назад</string>
    <string name="delete_button">Удалить</string>
    <string name="amount_hint">Сумма</string>
    <string name="budget_hint">Бюджет</string>
    <string name="category_hint">Категория</string>
    <string name="source_hint">Источник</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Пароль</string>
    <string name="username_hint">Имя пользователя</string>
    <string name="login_title">Вход</string>
    <string name="register_title">Регистрация</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="budget_settings_title">Настройки бюджета</string>
    <string name="currency_hint">Валюта</string>
    <string name="edit_title">Редактирование</string>
    <string name="fab_content_description">Добавить новую транзакцию</string>
    <string name="select_period">Выбрать период</string>
    <string name="by_categories">По категориям</string>
    <string name="by_time">По времени</string>
    <string name="logo_description">Логотип приложения</string>
    <string name="profile_image">Изображение профиля</string>
    <string name="transaction_icon">Иконка транзакции</string>
    <string name="date_hint">Дата</string>
    <string name="stats_viewpager">Просмотр статистики</string>
    <string name="welcome_user">Привет, %s!</string>
    <string name="guest">Гость</string>
    <string name="guest_offline">Гость (оффлайн)</string>
    <string name="no_internet">Нет интернет-соединения</string>
    <string name="loading_cached_data">Загружаем локальные данные</string>
    <string name="error_user_not_authenticated">Пользователь не авторизован</string>
    <string name="error_loading_data">Ошибка загрузки данных</string>
    <string name="budget_almost_exhausted">Бюджет почти исчерпан!</string>
    <string name="error_empty_amount">Введите сумму</string>
    <string name="error_invalid_amount">Сумма должна быть больше 0</string>
    <string name="error_select_category_source">Выберите категорию и источник</string>
    <string name="error_missing_type">Не указан тип операции</string>
    <string name="error_transaction_not_found">Транзакция не найдена</string>
    <string name="error_transaction_format">Ошибка формата транзакции</string>
    <string name="set_budget_title">Установить бюджет</string>
    <string name="edit_transaction_title">Редактировать транзакцию</string>
    <string name="error_init_spinners">Ошибка инициализации списков</string>
    <string name="error_empty_budget">Введите бюджет</string>
    <string name="error_invalid_budget">Бюджет должен быть больше 0</string>
    <string name="budget_saved">Бюджет сохранен</string>
    <string name="error_saving_budget">Ошибка сохранения бюджета</string>
    <string name="transaction_updated">Транзакция обновлена</string>
    <string name="transaction_deleted">Транзакция удалена</string>
    <string name="error_delete_transaction">Не удалось удалить транзакцию</string>
    <string name="error_empty_fields">Все поля должны быть заполнены</string>
    <string name="error_short_password">Пароль должен содержать минимум 6 символов</string>
    <string name="error_invalid_email">Введите корректный email</string>
    <string name="error_registration">Ошибка регистрации</string>
    <string name="error_saving_data">Ошибка сохранения данных</string>
    <string name="error_date_parse">Ошибка обработки даты</string>
    <string name="date_picker_in_development">Выбор даты пока в разработке</string>
    <string name="no_transactions_for_period">Нет транзакций за выбранный период</string>
    <string name="error_dialog_layout">Ошибка загрузки диалога</string>
    <string name="error_invalid_budget_format">Некорректный формат бюджета</string>
    <string name="user_icon_description">Иконка пользователя</string>
    <string name="budget_month_title">Бюджет на месяц</string>
    <string name="chip_all">Все</string>
    <string name="chip_day">День</string>
    <string name="chip_week">Неделя</string>
    <string name="chip_month">Месяц</string>
    <string name="chip_custom">Выбрать даты</string>
    <string name="chip_custom_description">Выбрать пользовательский период</string>
    <string name="detail_title">Детали транзакции</string>
    <string name="detail_amount_default">Сумма: 0 ₽</string>
    <string name="detail_date_default">Дата: Не указана</string>
    <string name="navigation_back_description">Кнопка возврата</string>
    <string name="edit_profile_title">Редактировать профиль</string>
    <string name="error_empty_profile">Все поля профиля должны быть заполнены</string>
    <string name="error_loading_profile">Ошибка загрузки профиля</string>
    <string name="error_saving_profile">Ошибка сохранения профиля</string>
    <string name="profile_saved">Профиль сохранен</string>
    <string name="increase_budget">Увеличить бюджет</string>
    <string name="add_income">Добавить доход</string>
    <string name="error_loading_transactions">Ошибка загрузки транзакций</string>
    <string name="error_invalid_date_range">Недопустимый диапазон дат</string>
    <string name="budget_alert_description">Уведомление о превышении бюджета</string>
    <string name="increase_budget_description">Кнопка для увеличения бюджета</string>
    <string name="add_income_description">Кнопка для добавления дохода</string>
    <string name="income_description">Сумма дохода</string>
    <string name="expense_description">Сумма расхода</string>
    <string name="transactions_list_description">Список транзакций</string>
    <string name="edit_transaction_description">Редактировать транзакцию</string>
    <string name="logout_description">Выйти из аккаунта</string>
    <string name="chip_all_description">Показать все транзакции</string>
    <string name="chip_day_description">Фильтр по транзакциям за день</string>
    <string name="chip_week_description">Фильтр по транзакциям за неделю</string>
    <string name="chip_month_description">Фильтр по транзакциям за месяц</string>
    <string name="edit_transaction">Изменить транзакцию</string>
    <string name="error_login_failed">Login failed. Check your credentials.</string>
</resources>