<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="16dp">

    <!-- Toolbar -->

    <!-- Заголовок формы -->

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="12dp"
        android:background="@color/primary"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationContentDescription="@string/navigation_back_description"
        app:navigationIcon="@drawable/ic_back"
        app:navigationIconTint="@color/onPrimary"
        app:title="@string/edit_title"
        app:titleTextColor="@color/onPrimary" />

    <TextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/on_background"
        android:contentDescription="@string/edit_title"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Поле имени пользователя -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:hintTextColor="@color/primary"
        app:boxStrokeColor="@color/primary"
        app:layout_constraintTop_toBottomOf="@id/titleView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:fontFamily="@font/ubuntu_light"
            android:contentDescription="@string/username_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Поле email -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:hintTextColor="@color/primary"
        app:boxStrokeColor="@color/primary"
        app:layout_constraintTop_toBottomOf="@id/usernameInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/ubuntu_light"
            android:contentDescription="@string/email_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Спиннер категории -->
    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/category_hint"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Спиннер источника -->
    <Spinner
        android:id="@+id/sourceSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/source_hint"
        app:layout_constraintTop_toBottomOf="@id/categorySpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Поле суммы -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amountInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:hintTextColor="@color/primary"
        app:boxStrokeColor="@color/primary"
        app:layout_constraintTop_toBottomOf="@id/sourceSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount_hint"
            android:inputType="numberDecimal"
            android:fontFamily="@font/ubuntu_light"
            android:contentDescription="@string/amount_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Поле бюджета -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/budgetInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:hintTextColor="@color/primary"
        app:boxStrokeColor="@color/primary"
        app:layout_constraintTop_toBottomOf="@id/amountInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etBudget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/budget_hint"
            android:inputType="numberDecimal"
            android:fontFamily="@font/ubuntu_light"
            android:contentDescription="@string/budget_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Кнопки действий -->
    <LinearLayout
        android:id="@+id/actionButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/budgetInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_button"
            app:backgroundTint="@color/main_color"
            android:contentDescription="@string/save_button"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/main_color"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="@string/delete_button"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:textColor="@color/white"
            app:strokeWidth="1dp"
            android:contentDescription="@string/delete_button"/>


    </LinearLayout>

    <!-- Кнопка назад -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/back_button"
        style="@style/Widget.Material3.Button.TextButton"
        android:contentDescription="@string/back_button"
        app:layout_constraintTop_toBottomOf="@id/actionButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>